@@ -187,6 +187,15 @@ int hwloc_internal_distances_dup(struct hwloc_topology *new, struct hwloc_topolo
 {
   struct hwloc_internal_distances_s *olddist;
   int err;
+
+  new->grouping = old->grouping;
+  if (old->grouping) {
+    new->grouping_verbose = old->grouping_verbose;
+    new->grouping_nbaccuracies = old->grouping_nbaccuracies;
+    memcpy(new->grouping_accuracies, old->grouping_accuracies, sizeof(old->grouping_accuracies));
+    new->grouping_next_subkind = old->grouping_next_subkind;
+  }
+
   new->next_dist_id = old->next_dist_id;
   for(olddist = old->first_dist; olddist; olddist = olddist->next) {
     err = hwloc_internal_distances_dup_one(new, olddist);
